--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -134,30 +134,31 @@
                     <tr v-for="video in uniqueList">
                         <td>
                             <div class="videoBox">
-                                <table style="display: inline-block; border-collapse: collapse; width:90%">
-                                    <tr class="videoRows">
-                                        <th rowspan="3" valign="top">
-                                            <div @click="openVideo(video.id)" class="videoThumb">
-                                                <img :src="video.thumbnailUrl" style="width:246px;height:138px" />
-                                                <p>{{video.duration}}</p>
+                                <div class="videoContentDiv">
+                                    <div @click="openVideo(video.id)" class="videoThumb">
+                                        <img :src="video.thumbnailUrl" style="width:246px;height:138px" />
+                                        <p>{{video.duration}}</p>
+                                    </div>
+                                    <div class="videoTextContentDiv">
+                                        <div class="videoTitleDiv">
+                                            <div class="videoTitleAndMetaDiv">
+                                                <div @click="openVideo(video.id)" class="videoTitle">
+                                                    {{video.title}}
+                                                </div>
+                                                <div class="videoText">
+                                                    <span class="videoTextChannel" @click="openChannel(video.channelName)">{{video.channelTitle}}</span> &#9679 {{video.publishedAtString}}
+                                                </div>
                                             </div>
-                                        </th>
-                                        <td @click="openVideo(video.id)" class="videoTitle">
-                                            {{video.title}}
-                                        </td>
-                                    </tr>
-                                    <tr class="videoRows">
-                                        <td class="videoText">
-                                            <span class="videoTextChannel" @click="openChannel(video.channelName)">{{video.channelTitle}}</span> &#9679 {{video.publishedAtString}}
-                                        </td>
-                                    </tr>
-                                    <tr style="height:100px">
-                                        <td class="videoDesc">
-                                            <p style="margin-top:5px">{{video.description}} </p>
-                                        </td>
-                                    </tr>
-                                </table>
-                                <button class="material-icons deleteButton tooltip" style="margin-top: 0" @click="deleteVideo(video)"><div class="tooltiptext ttright">Remove from Playlist</div>clear</button>
+                                            <div class="videoTitleButtons">
+                                                <button class="material-icons videoTitleButton tooltip" @click="deleteVideo(video)"><div class="tooltiptext ttright">Remove from Playlist</div>clear</button>
+                                            </div>
+                                        </div>
+
+                                        <div class="videoDesc">
+                                            <p>{{video.description}}</p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </td>
                     </tr>
@@ -175,36 +176,35 @@
                     <tr v-for="video in oldVideos">
                         <td>
                             <div class="videoBox">
-                                <table style="display: inline-block; border-collapse: collapse; width:90%">
-                                    <tr>
-                                        <td colspan="2" style="padding:10px">
-                                            <img :src="video.channelPicUrl" style="left:0;width:32px;height:32px;border-radius: 50%;vertical-align:middle;cursor:pointer;" @click="openChannel(video.channelName)" />
-                                            <span class="videoHeaderName" @click="openChannel(video.channelName)">{{video.channelTitle}}</span>
-                                        </td>
-                                    </tr>
-                                    <tr class="videoRows">
-                                        <th rowspan="3" valign="top">
-                                            <div @click="openVideo(video.id)" class="videoThumb">
-                                                <img :src="video.thumbnailUrl" style="width:246px;height:138px" />
-                                                <p>{{video.duration}}</p>
+                                <div class="videoChannelDiv">
+                                    <img :src="video.channelPicUrl" style="left:0;width:32px;height:32px;border-radius: 50%;vertical-align:middle;cursor:pointer;" @click="openChannel(video.channelName)" />
+                                    <span class="videoHeaderName" @click="openChannel(video.channelName)">{{video.channelTitle}}</span>
+                                </div>
+                                <div class="videoContentDiv">
+                                    <div @click="openVideo(video.id)" class="videoThumb">
+                                        <img :src="video.thumbnailUrl" style="width:246px;height:138px" />
+                                        <p>{{video.duration}}</p>
+                                    </div>
+                                    <div class="videoTextContentDiv">
+                                        <div class="videoTitleDiv">
+                                            <div class="videoTitleAndMetaDiv">
+                                                <div @click="openVideo(video.id)" class="videoTitle">
+                                                    {{video.title}}
+                                                </div>
+                                                <div class="videoText">
+                                                    <span class="videoTextChannel" @click="openChannel(video.channelName)">{{video.channelTitle}}</span> &#9679 {{video.publishedAtString}}
+                                                </div>
                                             </div>
-                                        </th>
-                                        <td @click="openVideo(video.id)" class="videoTitle">
-                                            {{video.title}}
-                                        </td>
-                                    </tr>
-                                    <tr class="videoRows">
-                                        <td class="videoText">
-                                            <span class="videoTextChannel" @click="openChannel(video.channelName)">{{video.channelTitle}}</span> &#9679 {{video.publishedAtString}}
-                                        </td>
-                                    </tr>
-                                    <tr style="height:100px">
-                                        <td class="videoDesc">
-                                            <p style="margin-top:5px">{{video.description}} </p>
-                                        </td>
-                                    </tr>
-                                </table>
-                                <button class="material-icons deleteButton tooltip" @click="reactivateVideo(video)"><div class="tooltiptext ttright">Add back to SubBox</div>add</button>
+                                            <div class="videoTitleButtons">
+                                                <button class="material-icons videoTitleButton tooltip" @click="reactivateVideo(video)"><div class="tooltiptext ttright">Add back to SubBox</div>add</button>
+                                            </div>
+                                        </div>
+
+                                        <div class="videoDesc">
+                                            <p>{{video.description}}</p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </td>
                     </tr>
@@ -417,37 +417,35 @@
             <tr v-for="video in lists">
                 <td>
                     <div class="videoBox">
-                        <table>
-                            <tr class="videoRows">
-                                <th rowspan="4" valign="top">
-                                    <div @click="openVideo(video.id)" class="videoThumb">
-                                        <img :src="video.thumbnailUrl" style="width:246px;height:138px" />
-                                        <p>{{video.duration}}</p>
+                        <div class="videoContentDiv">
+                            <div @click="openVideo(video.id)" class="videoThumb">
+                                <img :src="video.thumbnailUrl" style="width:246px;height:138px" />
+                                <p>{{video.duration}}</p>
+                            </div>
+                            <div class="videoTextContentDiv">
+                                <div class="videoTitleDiv">
+                                    <div style="width: 100%" class="videoTitleAndMetaDiv">
+                                        <div @click="openVideo(video.id)" class="videoTitle">
+                                            {{video.title}}
+                                        </div>
+                                        <div class="videoText">
+                                            <span class="videoTextChannel" @click="openChannel(video.channelName)">{{video.channelTitle}}</span> &#9679 {{video.publishedAtString}}
+                                        </div>
                                     </div>
-                                </th>
-                                <td @click="openVideo(video.id)" class="videoTitle">
-                                    {{video.title}}
-                                </td>
-                            </tr>
-                            <tr class="videoRows">
-                                <td class="videoText">
-                                    <span class="videoTextChannel" @click="openChannel(video.channelName)">{{video.channelTitle}}</span> &#9679 {{video.publishedAtString}}
-                                </td>
-                            </tr>
-                            <tr style="height:50px">
-                                <td class="videoDesc">
-                                    <p style="margin-top:5px">{{video.description}}</p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td style="display: flex;">
+                                </div>
+
+                                <div class="videoDesc">
+                                    <p>{{video.description}}</p>
+                                </div>
+
+                                <div class="playlistButtonDiv">
                                     <p class="playlistHint">PLAYLIST</p>
                                     <button @click="prev(video.list)" style="margin-left: auto" class="material-icons listButton tooltip"><div class="tooltiptext ttleft">Previous Video</div>fast_rewind</button>
                                     <button @click="next(video.list)" class="material-icons listButton tooltip"><div class="tooltiptext ttright">Next Video</div>fast_forward</button>
                                     <button @click="showUniqueList(video.list)" class="material-icons listButton tooltip"><div class="tooltiptext ttright">Show Playlist</div>view_list</button>
-                                </td>
-                            </tr>
-                        </table>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </td>
             </tr>
@@ -465,10 +463,15 @@
                                 <img :src="video.thumbnailUrl" style="width:246px;height:138px" />
                                 <p>{{video.duration}}</p>
                             </div>
-                            <div>
+                            <div class="videoTextContentDiv">
                                 <div class="videoTitleDiv">
-                                    <div @click="openVideo(video.id)" class="videoTitle">
-                                        {{video.title}}
+                                    <div class="videoTitleAndMetaDiv">
+                                        <div @click="openVideo(video.id)" class="videoTitle">
+                                            {{video.title}}
+                                        </div>
+                                        <div class="videoText">
+                                            <span class="videoTextChannel" @click="openChannel(video.channelName)">{{video.channelTitle}}</span> &#9679 {{video.publishedAtString}}
+                                        </div>
                                     </div>
                                     <div class="videoTitleButtons">
                                         <button v-show="video.dlstatus == 0" class="material-icons videoTitleButton tooltip" @click="downloadVideo(video)"><div class="tooltiptext ttleft">Download Video</div>save_alt</button>
@@ -477,9 +480,7 @@
                                         <button class="material-icons videoTitleButton tooltip" @click="deleteVideo(video)"><div class="tooltiptext ttright">Move to Trashbin</div>clear</button>
                                     </div>
                                 </div>
-                                <div class=" videoText">
-                                    <span class="videoTextChannel" @click="openChannel(video.channelName)">{{video.channelTitle}}</span> &#9679 {{video.publishedAtString}}
-                                </div>
+
                                 <div class="videoDesc">
                                     <p>{{video.description}}</p>
                                 </div>
