added durations to information overlay and fixed context menu changes from earlier

--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -84,6 +84,15 @@
                 <p>Amount of Videos in Trashbin:</p>
                 <label>{{informationContent[4]}}</label>
             </div>
+            <div class="informationOverlayRow tooltip">
+                <div class="tooltiptext ttdown">Does not include Playlists/Trashbin</div>
+                <p>Total Duration of Videos:</p>
+                <label>{{totalLength}}</label>
+            </div>
+            <div class="informationOverlayRow">
+                <p>Duration of filtered Videos:</p>
+                <label>{{filteredLength}}</label>
+            </div>
             <div class="informationOverlayRow">
                 <p>Amount of Channels:</p>
                 <label>{{informationContent[5]}}</label>
