added close subbox context button

--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -83,6 +83,10 @@
                 <p class="material-icons">delete_sweep</p>
                 <p>Delete whole Playlist</p>
             </div>
+            <div @click="closeSubBox()" class="menuButton">
+                <p class="material-icons">power_settings_new</p>
+                <p>Close SubBox</p>
+            </div>
             <div @click="toggleInformationMode()" class="menuButton">
                 <p class="material-icons">priority_high</p>
                 <p>About</p>
